# stellar-x402-gateway-dapp

./: .gitignore  README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.agents/skills/api-design-principles/: SKILL.md
.agents/skills/architecture/: SKILL.md
.agents/skills/debugging-strategies/: SKILL.md
.agents/skills/nextjs-best-practices/: SKILL.md
.agents/skills/security-auditor/: SKILL.md
.github/workflows/: ci.yml
contracts/: Cargo.toml
contracts/src/: lib.rs  test.rs
contracts/test_snapshots/test/: test_data_query_and_inter_contract_payment.1.json
pages/: _app.tsx  index.tsx
pages/api/: market-data.ts
scripts/: agent.ts  check-balances.ts  generate-and-setup.ts  get-api-key.ts  test-402-bounce.ts
styles/: globals.css
tests/: backend.test.ts  frontend.test.tsx
